# realworld-py

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LOCAL.md  README.md  RFP.md  devtoolkit.config.yaml
.claude/commands/: flow-feature.md
.github/workflows/: backend-ci.yml  issue-pr-title-lint.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_users.py  0003_articles_tags.py  0004_comments.py
backend/realworld/: __init__.py  config.py  db.py  errors.py  main.py
backend/realworld/models/: __init__.py  article.py  comment.py  user.py
backend/realworld/repositories/: article.py  comment.py  user.py
backend/realworld/routers/: articles.py  comments.py  tags.py  users.py
backend/realworld/schemas/: article.py  comment.py  tag.py  user.py
backend/realworld/services/: article.py  auth.py  comment.py
backend/realworld/utils/: jwt.py  security.py  slug.py
backend/scripts/: seed_articles.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: conftest.py  test_articles_routes.py  test_comments_routes.py  test_performance.py  test_tags_routes.py  test_users_routes.py
backend/tests/unit/: test_article_service.py  test_auth_service.py  test_comment_service.py  test_jwt.py  test_security.py  test_slug.py  test_user_repo.py
docs/features/bug-auth-ux-gap/: bug-auth-ux-gap.acceptance.md  bug-auth-ux-gap.ai-qa-report.md  bug-auth-ux-gap.brief.md  bug-auth-ux-gap.code-review.md  bug-auth-ux-gap.contract.md  bug-auth-ux-gap.eng-review.md  bug-auth-ux-gap.plan.md  bug-auth-ux-gap.risk.md
docs/features/bug-ci-lint-title/: bug-ci-lint-title.acceptance.md  bug-ci-lint-title.ai-qa-report.md  bug-ci-lint-title.brief.md  bug-ci-lint-title.code-review.md  bug-ci-lint-title.contract.md  bug-ci-lint-title.eng-review.md  bug-ci-lint-title.plan.md  bug-ci-lint-title.risk.md
docs/features/feat-auth-service/: feat-auth-service.acceptance.md  feat-auth-service.brief.md  (+6 more)
docs/planning/: INDEX.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
(+134 files in other folders)
