[project]
name = "realworld"
version = "0.1.0"
description = "RealWorld (Conduit) bulletin board — FastAPI backend"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "haeunpark-623", email = "woosung.ahn@bespinglobal.com" },
]
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlalchemy[asyncio]>=2.0.35,<2.1.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.12,<0.1.0",
    "email-validator>=2.2.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<0.29.0",
    "ruff>=0.7.0,<0.10.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["realworld"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "alembic/versions", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"realworld/errors.py" = ["N818"]  # RealWorld 도메인 명명 보존 (DuplicateEmail / InvalidToken / NotFound 등)
"realworld/deps/**" = ["B008", "S105"]  # FastAPI Depends/Header argument default 표준 패턴 + Token prefix 상수
"realworld/routers/**" = ["B008"]  # FastAPI Depends/Query argument default 표준 패턴

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
